--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -6,6 +6,6 @@ project.version=8.1-SNAPSHOT
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=8.1-SNAPSHOT
-dependency.kettle.revision=8.1-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=8.1-SNAPSHOT
+platform.version=8.1-SNAPSHOT
+pdi.version=8.1-SNAPSHOT
+pentaho-cpf-plugin.version=8.1-SNAPSHOT
