--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -10,10 +10,10 @@ project.revision=8.1-SNAPSHOT
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=8.1-SNAPSHOT
-dependency.kettle.revision=8.1-SNAPSHOT
-kettle-json-plugin.version=8.1-SNAPSHOT
-dependency.pentaho-metastore.revision=8.1-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=8.1-SNAPSHOT
+platform.version=8.1-SNAPSHOT
+pdi.version=8.1-SNAPSHOT
+pdi-json-plugin.version=8.1-SNAPSHOT
+pentaho-metastore.version=8.1-SNAPSHOT
+pentaho-cpf-plugin.version=8.1-SNAPSHOT
 dependency.spring.framework.revision=4.3.2.RELEASE
 dependency.spring.mock.revision=2.0.8
