--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -10,9 +10,9 @@ project.revision=8.1-SNAPSHOT
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-pentaho5
-dependency.pentaho-platform.revision=8.1-SNAPSHOT
-dependency.kettle.revision=8.1-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=8.1-SNAPSHOT
+platform.version=8.1-SNAPSHOT
+pdi.version=8.1-SNAPSHOT
+pentaho-cpf-plugin.version=8.1-SNAPSHOT
 dependency.spring.framework.revision=4.3.2.RELEASE
 dependency.spring.security.revision=4.1.3.RELEASE
 dependency.spring.mock.revision=2.0.8
