--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -1,11 +1,11 @@
-project.revision=8.0-SNAPSHOT
+project.revision=8.0.0.2-147
 # Stage: TRUNK | STABLE | BETA | other branch
-project.stage=master
+project.stage=8.0.0.2
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
-project.version=8.0-SNAPSHOT
+project.version=8.0.0.2-147
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=8.0-SNAPSHOT
-dependency.kettle.revision=8.0-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=8.0-SNAPSHOT
+dependency.bi-platform.revision=8.0.0.2-147
+dependency.kettle.revision=8.0.0.2-147
+dependency.pentaho-cpf-plugin.revision=8.0.0.2-147
