--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -1,19 +1,19 @@
 # project properties
 project.id=cpk-core
-project.stage=master
-project.version=7.1-SNAPSHOT
+project.stage=7.1.0.9
+project.version=7.1.0.9-101
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=7.1-SNAPSHOT
+project.revision=7.1.0.9-101
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=7.1-SNAPSHOT
-dependency.kettle.revision=7.1-SNAPSHOT
-kettle-json-plugin.version=7.1-SNAPSHOT
-dependency.pentaho-metastore.revision=7.1-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=7.1-SNAPSHOT
+dependency.pentaho-platform.revision=7.1.0.9-101
+dependency.kettle.revision=7.1.0.9-101
+kettle-json-plugin.version=7.1.0.9-101
+dependency.pentaho-metastore.revision=7.1.0.9-101
+dependency.pentaho-cpf-plugin.revision=7.1.0.9-101
 dependency.spring.framework.revision=4.3.2.RELEASE
 dependency.spring.mock.revision=2.0.8
