--- a/pentaho5/pom.xml
+++ b/pentaho5/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.pentaho.ctools</groupId>
     <artifactId>cpk-parent</artifactId>
-    <version>8.1.0.0-SNAPSHOT</version>
+    <version>8.1.0.6-682</version>
   </parent>
 
   <properties>
