--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
   <groupId>org.pentaho.ctools</groupId>
   <artifactId>cpk-parent</artifactId>
-  <version>8.1.0.0-SNAPSHOT</version>
+  <version>8.1.0.6-682</version>
   <packaging>pom</packaging>
   <name>CPK Parent</name>
   
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>8.1.0.0-SNAPSHOT</version>
+    <version>8.1.0.6-682</version>
   </parent>
 
   <scm>
@@ -21,13 +21,13 @@
   </scm>
 
   <properties>
-    <pentaho-cpf-plugin.version>${project.version}</pentaho-cpf-plugin.version>
-    <pentaho-cpf-plugin.version>${project.version}</pentaho-cpf-plugin.version>
-    <pentaho-cpk-plugin.version>${project.version}</pentaho-cpk-plugin.version>
-    <platform.version>${project.version}</platform.version>
-    <pdi.version>${project.version}</pdi.version>
-    <metastore.version>${project.version}</metastore.version>
-    <pdi-json-plugin.version>${project.version}</pdi-json-plugin.version>
+    <pentaho-cpf-plugin.version>8.1.0.6-682</pentaho-cpf-plugin.version>
+    <pentaho-cpf-plugin.version>8.1.0.6-682</pentaho-cpf-plugin.version>
+    <pentaho-cpk-plugin.version>8.1.0.6-682</pentaho-cpk-plugin.version>
+    <platform.version>8.1.0.6-682</platform.version>
+    <pdi.version>8.1.0.6-682</pdi.version>
+    <metastore.version>8.1.0.6-682</metastore.version>
+    <pdi-json-plugin.version>8.1.0.6-682</pdi-json-plugin.version>
     <commons-io.version>2.4</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
     <spring.security.version>4.1.3.RELEASE</spring.security.version>
