--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <jackson-core-asl.version>1.8.2</jackson-core-asl.version>
     <jackson-mapper-asl.version>1.8.2</jackson-mapper-asl.version>
     <jsr311-api.version>1.1.1</jsr311-api.version>
-    <servlet-api.version>2.4</servlet-api.version>
+    <servlet-api.version>3.0.1</servlet-api.version>
     <jersey-core.version>1.16</jersey-core.version>
     <jersey-server.version>1.9.1</jersey-server.version>
     <powermock.version>1.6.3</powermock.version>
@@ -55,6 +55,7 @@
     <httpclient.version>4.5.3</httpclient.version>
     <httpcore.version>4.4.6</httpcore.version>
     <log4j.version>1.2.14</log4j.version>
+    <jsonassert.version>1.5.0</jsonassert.version>
   </properties>
 
   <dependencyManagement>
@@ -182,15 +183,8 @@
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
+        <artifactId>javax.servlet-api</artifactId>
         <version>${servlet-api.version}</version>
-        <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>*</groupId>
-            <artifactId>*</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
       <dependency>
         <groupId>pentaho</groupId>
