--- a/core/pom.xml
+++ b/core/pom.xml
@@ -143,13 +143,13 @@
       <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- Only needed for runtime testing-->
+    <!-- region - Needed for runtime testing-->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- -->
+    <!-- endregion -->
 
     <dependency>
       <groupId>org.springframework</groupId>
