--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
   <groupId>org.pentaho.ctools</groupId>
   <artifactId>cpk-parent</artifactId>
-  <version>9.2.0.0-SNAPSHOT</version>
+  <version>9.2.0.0-103</version>
   <packaging>pom</packaging>
   <name>CPK Parent</name>
   
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>9.2.0.0-SNAPSHOT</version>
+    <version>9.2.0.0-103</version>
   </parent>
 
   <scm>
@@ -21,13 +21,13 @@
   </scm>
 
   <properties>
-    <pentaho-cpf-plugin.version>9.2.0.0-SNAPSHOT</pentaho-cpf-plugin.version>
-    <pentaho-cpf-plugin.version>9.2.0.0-SNAPSHOT</pentaho-cpf-plugin.version>
-    <pentaho-cpk-plugin.version>9.2.0.0-SNAPSHOT</pentaho-cpk-plugin.version>
-    <platform.version>9.2.0.0-SNAPSHOT</platform.version>
-    <pdi.version>9.2.0.0-SNAPSHOT</pdi.version>
-    <metastore.version>9.2.0.0-SNAPSHOT</metastore.version>
-    <pdi-json-plugin.version>9.2.0.0-SNAPSHOT</pdi-json-plugin.version>
+    <pentaho-cpf-plugin.version>9.2.0.0-103</pentaho-cpf-plugin.version>
+    <pentaho-cpf-plugin.version>9.2.0.0-103</pentaho-cpf-plugin.version>
+    <pentaho-cpk-plugin.version>9.2.0.0-103</pentaho-cpk-plugin.version>
+    <platform.version>9.2.0.0-103</platform.version>
+    <pdi.version>9.2.0.0-103</pdi.version>
+    <metastore.version>9.2.0.0-103</metastore.version>
+    <pdi-json-plugin.version>9.2.0.0-103</pdi-json-plugin.version>
     <commons-io.version>2.4</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
     <ehcache-core.version>2.5.1</ehcache-core.version>
