--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.pentaho.ctools</groupId>
   <artifactId>cpk-parent</artifactId>
-  <version>9.3.0.0-SNAPSHOT</version>
+  <version>9.3.0.0-11</version>
   <packaging>pom</packaging>
   <name>CPK Parent</name>
   
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.0.0-11</version>
   </parent>
 
   <scm>
@@ -21,12 +20,12 @@
   </scm>
 
   <properties>
-    <pentaho-cpf-plugin.version>9.3.0.0-SNAPSHOT</pentaho-cpf-plugin.version>
-    <pentaho-cpk-plugin.version>9.3.0.0-SNAPSHOT</pentaho-cpk-plugin.version>
-    <platform.version>9.3.0.0-SNAPSHOT</platform.version>
-    <pdi.version>9.3.0.0-SNAPSHOT</pdi.version>
-    <metastore.version>9.3.0.0-SNAPSHOT</metastore.version>
-    <pdi-json-plugin.version>9.3.0.0-SNAPSHOT</pdi-json-plugin.version>
+    <pentaho-cpf-plugin.version>9.3.0.0-11</pentaho-cpf-plugin.version>
+    <pentaho-cpk-plugin.version>9.3.0.0-11</pentaho-cpk-plugin.version>
+    <platform.version>9.3.0.0-11</platform.version>
+    <pdi.version>9.3.0.0-11</pdi.version>
+    <metastore.version>9.3.0.0-11</metastore.version>
+    <pdi-json-plugin.version>9.3.0.0-11</pdi-json-plugin.version>
     <commons-io.version>2.4</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
     <ehcache-core.version>2.5.1</ehcache-core.version>
