--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
     <jersey-core.version>1.16</jersey-core.version>
     <jersey-server.version>1.9.1</jersey-server.version>
     <powermock.version>1.6.3</powermock.version>
-    <mockito-all.version>1.10.19</mockito-all.version>
-    <junit.version>4.11</junit.version>
+    <mockito-core.version>5.10.0</mockito-core.version>
+    <junit.version>4.13.2</junit.version>
     <jersey-client.client>1.16</jersey-client.client>
     <commons-vfs.version>1.0</commons-vfs.version>
     <json.version>20090211</json.version>
@@ -211,9 +211,33 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy-agent</artifactId>
+        <version>1.12.16</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy</artifactId>
+        <version>1.12.16</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.objenesis</groupId>
+        <artifactId>objenesis</artifactId>
+        <version>2.3</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>1.3</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-all</artifactId>
-        <version>${mockito-all.version}</version>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito-core.version}</version>
         <scope>test</scope>
         <exclusions>
           <exclusion>
